Revise to use semantics of divisiblity as "# of decimal places"
Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>